--- a/src/pages/DevTalk.module.css
+++ b/src/pages/DevTalk.module.css
@@ -4,7 +4,7 @@
   height: 1080px;
   border: 1px solid black;
 }
-p {
+.question {
   font-size: 18px;
   font-family: "Montserrat", sans-serif;
   margin-top: 50px;
@@ -20,10 +20,7 @@ p {
   color: red;
   font-size: 64px;
   font-family: "Rowdies", cursive;
-  margin: 100px 0 115px 20px;
-}
-.questions__container {
-  /* margin-left: 100px; */
+  margin: 90px 0 95px 20px;
 }
 
 .radio_btn {
@@ -31,10 +28,9 @@ p {
   margin-top: 30px;
 }
 .radio__input {
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   margin-right: 10px;
-  display: block;
 }
 .textarea1 {
   width: 535px;
@@ -50,7 +46,17 @@ p {
   padding: 30px;
   resize: none;
 }
-
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  width: 230px;
+  height: 20px;
+  margin-top: 80px;
+}
+.right_arrow {
+  cursor: pointer;
+  border: none;
+}
 .info {
   flex: 1;
   background-color: black;
