--- a/src/pages/DevTalk.module.css
+++ b/src/pages/DevTalk.module.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 .devTalks h1 {
@@ -49,6 +50,8 @@
 .pagination {
   display: flex;
   justify-content: space-between;
+  position: absolute;
+  bottom: 100px;
   width: 230px;
   height: 20px;
   margin-top: 80px;
