--- a/src/Components/Skill.module.css
+++ b/src/Components/Skill.module.css
@@ -1,6 +1,12 @@
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   border: 1px solid black;
   width: 447px;
