--- a/src/pages/ApplicationList.module.css
+++ b/src/pages/ApplicationList.module.css
@@ -1,5 +1,10 @@
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   background-color: black;
   width: 1920px;
@@ -13,114 +18,4 @@
   font-weight: bold;
   margin: 120px 0 80px 20px;
   letter-spacing: 3px;
-}
-.accordion_item {
-  display: flex;
-  flex-direction: column;
-  width: 1154px;
-  height: 1594px;
-}
-.accordion_header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 52px;
-  background-color: red;
-  padding: 0 20px 0 20px;
-}
-.accordion_content {
-  background-color: #ffffff;
-  height: 100%;
-  padding: 60px 65px 220px 150px;
-  font-family: "Montserrat", sans-serif;
-}
-.about_section {
-  display: flex;
-  height: 300px;
-}
-.title {
-  font-size: 18px;
-  color: red;
-  font-family: "Montserrat", sans-serif;
-  font-style: italic;
-  font-weight: normal;
-  text-decoration: underline;
-}
-.personal_info {
-  width: 45%;
-  height: 100%;
-}
-.pers_item {
-  display: flex;
-  justify-content: space-between;
-  margin: 40px 50% 0 0;
-}
-.skillset {
-  width: 55%;
-  height: 100%;
-}
-.info_container {
-  display: flex;
-  height: 1100px;
-  margin-top: 50px;
-}
-.covid_container {
-  display: flex;
-  flex-direction: column;
-  width: 45%;
-  height: 100%;
-  padding-right: 70px;
-}
-.insigts_container {
-  display: flex;
-  flex-direction: column;
-  width: 55%;
-  height: 100%;
-}
-.radio_btn {
-  display: flex;
-}
-.radio__input {
-  width: 15px;
-  height: 15px;
-  margin-left: 15px;
-  margin-right: 15px;
-  display: block;
-}
-.question {
-  font-size: 18px;
-  font-family: "Montserrat", sans-serif;
-  margin: 30px 0 30px 0;
-}
-.date__input {
-  width: 349px;
-  height: 54px;
-  border: 1px solid #454545;
-  padding: 10px;
-}
-.input__wrapper {
-  position: relative;
-}
-.calendar__img {
-  position: absolute;
-  top: 20px;
-  right: 19px;
-  width: 13px;
-  height: 13px;
-}
-
-.textarea1 {
-  width: 447px;
-  height: 122px;
-  margin-top: 30px;
-  padding: 30px;
-  resize: none;
-}
-.textarea2 {
-  width: 447px;
-  height: 89px;
-  margin-top: 30px;
-  padding: 30px;
-  resize: none;
 }
