--- a/src/pages/DevTalk.module.css
+++ b/src/pages/DevTalk.module.css
@@ -1,4 +1,6 @@
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 1920px;
   height: 1080px;
@@ -10,9 +12,18 @@
   margin-top: 50px;
 }
 .devTalks {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   position: relative;
 }
@@ -25,6 +36,8 @@
 }
 
 .radio_btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-top: 30px;
 }
@@ -48,7 +61,11 @@
   resize: none;
 }
 .pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   position: absolute;
   bottom: 100px;
@@ -61,6 +78,8 @@
   border: none;
 }
 .info {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
   background-color: black;
 }
