--- a/src/pages/Submit.module.css
+++ b/src/pages/Submit.module.css
@@ -2,8 +2,15 @@
   background-color: black;
   width: 1920px;
   height: 1080px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
